# mathlogic-homework8

./: .gitignore  README.md  mathlogic-homework8.cabal  task8.out
src/: CNF.hs  Main.hs  Ordinal.hs  Ordinal.y
