name:                 mathlogic-homework8
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Dmitry Nekrasov
maintainer:           d04101995@mail.ru
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable mathlogic-homework8
  main-is:              Main.hs
  other-modules:        Ordinal, CNF
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, array
  hs-source-dirs:       src
  default-language:     Haskell2010
